frontend/test/should_fail/index_multiple_missing2_where_index_expected.grg
#using "index_multiple_model.gm"

rule i(ref s:set<int>) {
	if{ nodesFromIndexMultipleFromTo(Ni, 0, 1, s, 0, 1).size() > 0; }
	
	modify {
	}
}
